# OSKI-Software

./: .gitignore  platformio.ini
Ground Software/Camera_Testing/camera_driver/: camera_driver.ino
Ground Software/Ground Radio/: platformio.ini
Ground Software/Ground Radio/src/: main.cpp
flight-software/: README.md  platformio.ini
flight-software/lib/BQ76905/: BQ76905.cpp  BQ76905.h
flight-software/lib/LoRa/: LoRa.cpp
flight-software/src/adcs-controller/: main.cpp
flight-software/src/flight-controller/: ADCS.cpp  ADCS.h  BMS.cpp  BMS.h  CAM.cpp  CAM.h  Common.h  GPS.h  Housekeeping.h  IMU.h  README.md  RadioComms.cpp  RadioComms.h  main.cpp
flight-software/src/ground-station/: main.cpp
flight-software/src/tests/i2c-scanner-test/: main.cpp
flight-software/src/tests/test-BMS/: main.cpp
flight-software/src/tests/test-bq25798/: main.cpp
flight-software/src/tests/test-closedloop/: main.cpp
flight-software/src/tests/test-fc-BNO055/: main.cpp  viewer.py
flight-software/src/tests/test-fc-GPS/: main.cpp
flight-software/src/tests/test-fc-blink/: main.cpp
flight-software/src/tests/test-fc-radio/: main.cpp
flight-software/src/tests/test-mag-encoder/: main.cpp
flight-software/src/tests/test-motor-openloop/: main.cpp
flight-software/src/tests/test-radio/: main.cpp
flight-software/src/tests/test-radio-breakout/: main.cpp
ground-software/: .env.example  grafana_dashboard.json  ground_station.py  pyproject.toml
ground-software/Camera_Testing/camera_driver/: camera_driver.ino  camera_vis_script
